--- a/TIC/Simple Todo/main.css
+++ b/TIC/Simple Todo/main.css
@@ -8,3 +8,23 @@ main {
   height: 100vh;
   background: rgb(13, 12, 26);
 }
+* {
+  outline: 0;
+  text-decoration: none;
+}
+
+header {
+  width: 100%;
+  height: auto;
+  background: rgb(31, 29, 60);
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+}
+
+.addbtn {
+  width: 300px;
+  height: 50px;
+  color: #fff;
+}
