--- a/TIC/Simple Todo/main.css
+++ b/TIC/Simple Todo/main.css
@@ -16,7 +16,7 @@ main {
 header {
   width: 100%;
   height: auto;
-  background: rgb(31, 29, 60);
+  background: rgb(46, 43, 89);
   display: flex;
   text-align: center;
   align-items: center;
@@ -26,7 +26,11 @@ header {
 
 .addbtn {
   width: 200px;
-  height: 50px;
+  height: 47px;
+  background: rgb(5, 80, 130);
+  border: none;
+  border-radius: 3px;
+  box-shadow: 0px 0px 4px 0px rgba(255, 255, 255, 0.583);
   color: #fff;
 }
 
@@ -36,4 +40,5 @@ input {
   margin-right: 10px;
   border: none;
   border-radius: 3px;
+  box-shadow: 0px 0px 4px 0px rgba(255, 255, 255, 0.583);
 }
