--- a/TIC/Simple Todo/main.css
+++ b/TIC/Simple Todo/main.css
@@ -42,3 +42,8 @@ input {
   border-radius: 3px;
   box-shadow: 0px 0px 4px 0px rgba(255, 255, 255, 0.583);
 }
+.container {
+  width: 100%;
+  height: auto;
+  text-align: center;
+}
