--- a/TIC/PiggieTalk/Front/SignUp/main.css
+++ b/TIC/PiggieTalk/Front/SignUp/main.css
@@ -62,6 +62,8 @@ body {
   border: 2px solid var(--Pink);
   padding-left: 20px;
   margin-top: 20px;
+  padding-bottom: 2px;
+  background: rgba(255, 255, 255, 0.048);
 }
 
 .input input {
@@ -71,8 +73,18 @@ body {
   width: 87%;
   background: none;
   border: none;
+  margin-top: 2px;
 }
 
 ::placeholder {
   color: #fff;
+}
+
+.selectInput {
+  width: 100%;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
 }
