--- a/TIC/PiggieTalk/Front/SignUp/main.css
+++ b/TIC/PiggieTalk/Front/SignUp/main.css
@@ -25,7 +25,8 @@ body {
   width: 100%;
   height: 100%;
   background-color: var(--Dark);
-  overflow: hidden;
+  overflow-y: scroll;
+  overflow-x: hidden !important;
 }
 
 .logo {
@@ -87,4 +88,60 @@ body {
   align-items: center;
   justify-content: center;
   margin-top: 20px;
+}
+.selectInput div {
+  background-color: rgba(255, 255, 255, 0.048);
+  margin: 10px;
+  width: 180px;
+  height: 50px;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  border: 2px solid var(--Pink);
+  border-radius: 50px;
+}
+
+.selectInput div p {
+  color: #fff;
+  font-weight: bold;
+}
+
+.submit {
+  display: block;
+  margin: auto;
+  margin-top: 20px;
+  width: 250px;
+  height: 50px;
+  background: var(--Pink);
+  color: #fff;
+  border: none;
+  border-radius: 50px;
+  font-weight: bold;
+  cursor: pointer;
+  transition-duration: 0.5s;
+}
+.submit:hover {
+  background: #ffaae7;
+}
+#goBack {
+  color: #fff;
+  font-weight: bold;
+  display: block;
+  text-align: center;
+  margin-top: 30px;
+}
+::-webkit-scrollbar {
+  width: 7px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--Pink);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
